--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,8 @@
   <groupId>ru.vsu.cs.nsavchenko</groupId>
   <artifactId>java-students</artifactId>
   <version>1.0-SNAPSHOT</version>
-
   <name>java-students</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <packaging>war</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -52,6 +50,7 @@
     <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
+        <scope>runtime</scope>
         <version>42.6.0</version>
     </dependency>
     
@@ -107,5 +106,13 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <finalName>student-tasks</finalName>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.2</version>
+        </plugin>
+    </plugins>
   </build>
 </project>
