--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,14 +7,8 @@
 
     <display-name>Student Tasks Management System</display-name>
 
-    <error-page>
-        <error-code>404</error-code>
-        <location>/error.html</location>
-    </error-page>
-
-    <error-page>
-        <error-code>500</error-code>
-        <location>/error.html</location>
-    </error-page>
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
 
 </web-app> 
